src/app.scss
$bg-color: #ea0507;
$fg-color: #F5D33C;

.logo {
  max-width: 15rem;
}

.flatpickr-calendar {
  font-family: "Arial"
}

.text-fg {
  color: $fg-color;
}

.text-bg {
  color: $bg-color
}

.bg-bg {
  background-color: $bg-color;
}

.bg-fg {
  background-color: $fg-color;
}

h1, h2, h3, h4, h5, h6 {
  color: $bg-color;
}

.fillupsapp {
  > div:first-of-type {
    border: none;
  }
}

.footer .m {


  .letter {
    display: inline-block;
    transform: scale(1.5, 1);
    background-color: $bg-color;
    color: $fg-color;
    text-align: center;
    font-weight: bold;
    font-size: 2em;
    font-family: Verdana,Geneva,sans-serif;
    padding: 0em 0.1em;
    display: inline;
    margin-right: 0.5em;    
    line-height: 1.2;
  }

   p {
     color: #d10406;
   }
}

